--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -19,7 +19,7 @@ Thomas Brüggemann
 % Titel
 \begin{center}
 \LARGE 
-    Automating the privacy risk assessment for mHealth apps
+    Automating The Privacy Risk Assessment Of mHealth Apps
 \end{center}
 
 \vspace*{8mm}
