--- a/expose.tex
+++ b/expose.tex
@@ -341,6 +341,14 @@ After the implementation attempts of all privacy risk factors are completed
 
 \subsection{Evaluation}
 
+The evaluation phase starts with an overview of the degree of privacy risk assessment automation has been detected, we are going to switch over to the evaluation phase of the study.
+The explored privacy risk factors will be combined into the privacy risk index weighted-sum equation, proposed by \cite{Bruggemann2016} and will be displayed within their user interface.\footnote{\cite{Bruggemann2016}, p. 99}
+Using the \cite{Bruggemann2016} user interface allows the users to explore and compare \mH apps in a table view format. 
+It can be used alongside with downloading apps from the Google PlayStore.
+
+In order to evaluate the automated privacy risk assessment, we will expose 15 potential users of the 
+
+
 % STRUCTURE %
 \section{Structure}
 
