--- a/expose.tex
+++ b/expose.tex
@@ -122,6 +122,7 @@
 \usepackage{setspace}
 \counterwithin{table}{section}
 \usepackage{multirow}
+\usepackage{colortbl}
 
 % Grafiken anzeigen
 \usepackage[pdftex]{graphicx}
@@ -341,16 +342,61 @@ After the implementation attempts of all privacy risk factors are completed
 
 \subsection{Evaluation}
 
-The evaluation phase starts with an overview of the degree of privacy risk assessment automation has been detected, we are going to switch over to the evaluation phase of the study.
+The evaluation phase starts with an overview of the degree of privacy risk assessment automation that has been accomplished. 
+The evaluation will be based on the feasability and obstacles detected in implementing the automated privacy risk assessment.
 The explored privacy risk factors will be combined into the privacy risk index weighted-sum equation, proposed by \cite{Bruggemann2016} and will be displayed within their user interface.\footnote{\cite{Bruggemann2016}, p. 99}
 Using the \cite{Bruggemann2016} user interface allows the users to explore and compare \mH apps in a table view format. 
-It can be used alongside with downloading apps from the Google PlayStore.
+It can be used in addition to downloading apps from the Google PlayStore.
 
-In order to evaluate the automated privacy risk assessment, we will expose 15 potential users of the 
-
+In order to further evaluate the automated privacy risk assessment, we will expose 15 potential users to the user interface and let them discover our detected privacy risks.
+We will give an overview of the users options towards the presence of enhanced privacy risk information, that might change the users decision making process regarding the selection of \mH apps.
 
 % STRUCTURE %
 \section{Structure}
+
+Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht jeweils der geschätzte bzw. anvisierte Umfang des jeweiligen Kapitels.
+\newline\newline
+
+
+\begin{longtable}{>{\bfseries}p{2cm} p{10.1cm}}
+    \arrayrulecolor{lightgray}
+    1 Introduction & Die Einleitung gibt einen Überblick über die Problemstellung, Zielsetzung, Vorgehensweise und den Aufbau der Arbeit \\\hline
+    
+    1.1 Problem Statement & Beschreibung des Forschungskreislaufes der Bachelorarbeit um das Praxisproblem und dessen Relevanz sowie das Forschungsproblem und dessen Relevanz zu erörtern (1 Seite)\\\hline
+    
+    1.2 Objectives & Beschreibung des Hauptziels und der damit verbundenen Subziele um den Roten Faden der Bachelorarbeit zu verdeutlichen (\nicefrac{1}{2} Seite)\\\hline
+    
+    1.3 Method & Eine kurze Erläuterung der Vorgehensweise des systematischen Literaturreviews, der den Hauptteil der Arbeit ausmacht (1 Seite)\\\hline
+    
+    1.4 Structure & Formaler Aufbau und Übersicht der Arbeit wird beschrieben (\nicefrac{1}{2} Seite)\\\hline\hline
+    
+    2 Automated Privacy Risk Assessment & Dieses Kapitel beschreibt die grundlegenden Begriffe zum Thema Cloud Computing.\\\hline
+    
+    2.1 Privacy Risk Factors & Ausformulierung der Definition, was Cloud Computing auszeichnet (2 Seiten)\\\hline
+    
+    2.2 Implementation & Cloud Computing unterteilt sich in drei Servicemodelle, diese werden hier erörtert (2 Seiten)\\\hline
+    
+    2.2.1 Download Phase & test \\\hline
+    
+    2.2.2 Decompilation Phase & test \\\hline
+    
+    2.2.3 Static Code Analysis Phase & test \\\hline
+    
+    2.3 Results & Beschreibung der verschiedenen Möglichkeiten Cloud Computing einzusetzen. (1 Seite)\\\hline\hline
+    
+    3 Evaluation & Wie wurden die Herausforderungen des Cloud Computing in Literatur und Konferenzbeiträgen adressiert?\\\hline
+    
+    3.1 Evaluation of Implementation & Zusammentragen und Erörtern der, in der Literatur und in Konferenzbeiträgen, adressierten Herausforderungen (4 Seiten)\\\hline
+    
+    3.2 Overview of Users' Opinions & Eine quantitative Analyse der gefundenen Herausforderungen, also die eigentliche Auswertung der Excel-Tabelle (5 Seiten)\\\hline\hline
+
+    4 Conclusion & Abschließende kritische Reflexion der erarbeiteten Ergebnisse, Beurteilung der Zielerreichung und kritische  Würdigung der Arbeit (1-2 Seiten)
+    
+    4.1 Limitations & Test \\\hline
+    
+    4.2 Future Research & test \\\hline
+\end{longtable}
+
 
 % EXPECTED RESULTS %
 \section{Expected Results}
