--- a/expose.tex
+++ b/expose.tex
@@ -358,31 +358,31 @@ Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht 
 \newline\newline
 
 
-\begin{longtable}{>{\bfseries}p{2cm} p{10.1cm}}
+\begin{longtable}{>{\bfseries}p{5.2cm} p{9.1cm}}
     \arrayrulecolor{lightgray}
-    1 Introduction & Die Einleitung gibt einen Überblick über die Problemstellung, Zielsetzung, Vorgehensweise und den Aufbau der Arbeit \\\hline
+    1 Introduction & The introduction provides an overview of the problem statement, the objectives, the methods used and the structure of the thesis.\\\hline
     
-    1.1 Problem Statement & Beschreibung des Forschungskreislaufes der Bachelorarbeit um das Praxisproblem und dessen Relevanz sowie das Forschungsproblem und dessen Relevanz zu erörtern (1 Seite)\\\hline
+    1.1 Problem Statement & Description of the research cycle of the master thesis to further stress the practice problem and its relevance, as well as the research problem and its relevance.\\\hline
     
-    1.2 Objectives & Beschreibung des Hauptziels und der damit verbundenen Subziele um den Roten Faden der Bachelorarbeit zu verdeutlichen (\nicefrac{1}{2} Seite)\\\hline
+    1.2 Objectives & This section describes the primary objective of the thesis and the coherent secondary objectives.\\\hline
     
-    1.3 Method & Eine kurze Erläuterung der Vorgehensweise des systematischen Literaturreviews, der den Hauptteil der Arbeit ausmacht (1 Seite)\\\hline
+    1.3 Method & An overview of the research approach of this master thesis that reflects the main part of the thesis.\\\hline
     
-    1.4 Structure & Formaler Aufbau und Übersicht der Arbeit wird beschrieben (\nicefrac{1}{2} Seite)\\\hline\hline
+    1.4 Structure & Formal structure and overview of the thesis\\\hline\hline
     
-    2 Automated Privacy Risk Assessment & Dieses Kapitel beschreibt die grundlegenden Begriffe zum Thema Cloud Computing.\\\hline
+    2 Automated Privacy Risk Assessment & This chapter describes the main implementation phase of the thesis\\\hline
     
-    2.1 Privacy Risk Factors & Ausformulierung der Definition, was Cloud Computing auszeichnet (2 Seiten)\\\hline
+    2.1 Privacy Risk Factors & Introduction of the privacy risk factors identified by \cite{Bruggemann2016} and a further explanation on their relevance to \mH app assessments.\\\hline
     
-    2.2 Implementation & Cloud Computing unterteilt sich in drei Servicemodelle, diese werden hier erörtert (2 Seiten)\\\hline
+    2.2 Implementation & Details on the implementation of the automated \mH privacy risk assessment tool\\\hline
     
-    2.2.1 Download Phase & test \\\hline
+    2.2.1 Download Phase & Description of the \acs{APK} file discovery and download phase of the tool. While free Android apps are available for everybody with an Android smartphone, we want to feed \mH apps into our automated system and therefore need to download the \acs{APK} files automatically.\\\hline
     
-    2.2.2 Decompilation Phase & test \\\hline
+    2.2.2 Decompilation Phase & This section provides information on the decompilation phase of the \acs{APK} files and the methods used to regain the source code of Android apps. This is a crucial step, since the source code is our main and only resource to perform the static code analysis on, in chapter 2.2.3\\\hline
     
-    2.2.3 Static Code Analysis Phase & test \\\hline
+    2.2.3 Static Code Analysis Phase & Information on the different approaches to gather information on the individual privacy risk factors, explained in chapter 2.1. We will try to identify via a static code analysis, if the \mH app requires a login to tailor the user experience or not. Furthermore we want to find out if personal health data is collected and if so, what kind of data. Via source code analysis we aim at identifying the targets, where data is sent and if advertisement or click-analytics services are used.\\\hline
     
-    2.3 Results & Beschreibung der verschiedenen Möglichkeiten Cloud Computing einzusetzen. (1 Seite)\\\hline\hline
+    2.3 Results & Explaining the outcome of the implementation step. How many apps could be automatically assessed? How many factors could be automatically identified? Was it possible to compute information on all of the privacy risk factors from chapter 2.1?\\\hline\hline
     
     3 Evaluation & Wie wurden die Herausforderungen des Cloud Computing in Literatur und Konferenzbeiträgen adressiert?\\\hline
     
@@ -390,7 +390,7 @@ Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht 
     
     3.2 Overview of Users' Opinions & Eine quantitative Analyse der gefundenen Herausforderungen, also die eigentliche Auswertung der Excel-Tabelle (5 Seiten)\\\hline\hline
 
-    4 Conclusion & Abschließende kritische Reflexion der erarbeiteten Ergebnisse, Beurteilung der Zielerreichung und kritische  Würdigung der Arbeit (1-2 Seiten)
+    4 Conclusion & Abschließende kritische Reflexion der erarbeiteten Ergebnisse, Beurteilung der Zielerreichung und kritische  Würdigung der Arbeit (1-2 Seiten)\\\hline
     
     4.1 Limitations & Test \\\hline
     
