--- a/expose.tex
+++ b/expose.tex
@@ -209,6 +209,8 @@ The automated process of assessing the privacy risk helps to reduce the costs of
 It is unclear if, and to what degree, the concepts of static code analysis and privacy risk assessment can be combined in order to automate the app assessment.
 This leads to the research question of this master thesis. How and to what degree can the privacy risk assessment of mHealth apps be automated?
 
+% Related Work %
+\subsection{Related Work}
 \todo{Related Work bei \cite{xu2013techniques} abschauen}
 Previous research in this field revealed...
 
@@ -364,11 +366,13 @@ Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht 
     
     1.1 Problem Statement & Description of the research cycle of the master thesis to further stress the practice problem and its relevance, as well as the research problem and its relevance.\\\hline
     
-    1.2 Objectives & This section describes the primary objective of the thesis and the subsequent secondary objectives, that we will aim at reaching.\\\hline
+    1.2 Related Work & Overview of previous research and related work that has covered the topic of analysing \mH privacy risks or even using automated techniques on gathering privacy risk information\\\hline
     
-    1.3 Method & An overview of the research approach of this master thesis that reflects the main part of the thesis.\\\hline
+    1.3 Objectives & This section describes the primary objective of the thesis and the subsequent secondary objectives, that we will aim at reaching.\\\hline
     
-    1.4 Structure & The formal structure of the thesis to provide the reader with an  overview of the thesis.\\\hline\hline
+    1.4 Methods & An overview of the research approach of this master thesis that reflects the main part of the thesis.\\\hline
+    
+    1.5 Structure & The formal structure of the thesis to provide the reader with an  overview of the thesis.\\\hline\hline
     
     2 Automated Privacy Risk Assessment & This chapter describes the main implementation phase of the thesis.\\\hline
     
@@ -388,9 +392,9 @@ Es folgt eine Erläuterung der Gliederung der Bachelorarbeit. In Klammern steht 
     
     3.1 Evaluation of Implementation & Information on the feasibility of implementing an automated \mH privacy risk assessment tool, the challenges and obstacles. \\\hline
     
-    3.2 Overview of Users' Opinions & \\\hline\hline
+    3.2 Overview of Users' Opinions & Further evaluation of the automated privacy risk assessment tool is given by presenting an overview of the users' options on the tool. We will expose 15 users with our novel tool and share their option on the implications this tool has on \mH app decision making.\\\hline\hline
 
-    4 Conclusion & \\\hline
+    4 Conclusion & A critical reflection on the thesis. Are all the objectives reached and are the methods used coherent? \\\hline
     
     4.1 Limitations & Explanations in what way the research approach and execution was limited or constrained during this thesis.\\\hline
     
