--- a/expose.tex
+++ b/expose.tex
@@ -181,21 +181,24 @@
 
 % PROBLEM STATEMENT %
 \section{Problem Statement}
-The market for mobile smart device applications (apps) is growing extensively in recent years. 
-It is increasingly easier for small companies or even single developers to create unique apps that reach millions of users via app stores.
-This market growth also effected mobile health (\acs{mHealth}) apps. 
-More and more apps are available that support the users in solving their health related issues and information deficiencies. 
-Users are asked to input their personal information in order to tailor the app to their custom needs. 
-The users are asked to expose vulnerable information about their health status while it remains mostly unclear how and where the data is processed, stores or tossed along.
+The market for mobile smartdevice applications (apps) is growing extensively in recent years.
+It is increasingly easier for companies or even single developers to create unique apps that reach millions of users around the planet via digital app stores.\footnote{Previous two sentences following \cite{Enck2011}, p. 1}
+This market growth effected mobile health (\acs{mHealth}) apps as well. 
+More and more \mH apps are available that support the users in resolving their health related issues and that try to patch information deficiencies. 
+The data tools and information systems that have been used and maintained in hospitals for decades are recently carried out to distributed cloud services for virtually everyone to consume.\footnote{\cite{He2014a}, p. 645}
 
-The information about privacy practices of the \ap s should be found in the privacy policy document provided by the \ap.
-Processing these \pps requires a higher level of education and time to read through large documents of text to find the relevant information. 
-Additionally, the important information is hidden in legal language or insufficiently addressed, if at all.\footnote{\cite{Dehling2014}, p. 11}
+Users are asked to expose their personal health related information, in order to receive a tailored app that fits their custom preferences.\footnote{\cite{Chen2012}, p. 2}
+The users reveal vulnerable information about their health status, while it remains mostly unclear how and where the data is send, processed and stored.\footnote{\cite{He2014a}, p. 652}
 
-Aside from the data usage beyond users control, it is also challenging for users to assess what kind of privat information an app asks for, in order to tailor the app experience. 
-Users have to download the apps of interest and try them out, before it becomes clear what information is used. 
-This leads to low inter comparability between apps. If users are looking for specific functionality in a \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk. 
-Even if users would persue the goal to find and compare \mH apps of similar functionality, the high volume of apps available on the app stores\footnote{\cite{Enck2011}, p. 1} makes it not feasable to review all of them by hand.
+The information about these privacy related practices of \ap s and their offered apps should be stated in the privacy policy document, provided by the \ap.
+Processing these \pps requires a higher level of education and time to read through large bodies of text, to find the relevant information. 
+Additionally, the important information is hidden in legal language or insufficiently addressed, if at all.\footnote{This paragraph follows \cite{Dehling2014}, p. 11}
+
+Aside from the data usage beyond users control, it is also challenging for users to assess what kind of private information an app asks for, prior to the app usage. 
+Users have to download the apps of interest and try them out, before it becomes clear what health related information is processed by the app and in what way. 
+This leads to low inter comparability between apps. 
+If users are looking for specific functionality in a \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk. 
+Even if users would pursue the goal to find and compare \mH apps of similar functionality, the high volume of apps available on the app stores\footnote{\cite{Enck2011}, p. 1} makes it overbearingly hard to review all of them by hand.
 
 Resolving the challenges in evaluating the privacy risk of \mH apps, before usage and of large volumes, will result in an improved decision making process for users. 
 It also reduces the danger of exposing vulnerable information. 
